--- a/index.html
+++ b/index.html
@@ -4,8 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Facebook</title>
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/layout.css">
+    <link rel="stylesheet" href="./css/posts.css">
 </head>
 <body>
-    CONTENT
+    <header>
+        HEADER
+    </header>
+    <aside class="menu">
+        MENU
+    </aside>
+    <main>
+        FEED
+    </main>
+    <aside class="messenger">
+        MESSENGER
+    </aside>
 </body>
 </html>
