--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@
     <aside class="messenger">
         MESSENGER
     </aside>
+    <script src="./js/main.js" type="module"></script>
 </body>
 </html>
