--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Facebook</title>
+    <!-- reset -->
     <link rel="stylesheet" href="./css/reset.css">
+    <!--3rd party  -->
+    <link rel="stylesheet" href="./css/font-awesome.min.css">
+    <!-- mano komponentai -->
     <link rel="stylesheet" href="./css/layout.css">
     <link rel="stylesheet" href="./css/posts.css">
 </head>
@@ -21,6 +25,7 @@
     <aside class="messenger">
         MESSENGER
     </aside>
+    
     <script src="./js/main.js" type="module"></script>
 </body>
 </html>
